cmake_minimum_required(VERSION 3.13)
project(playground)


find_package(Dlib REQUIRED)
find_package(OpenCV REQUIRED)
if (Dlib_FOUND)
  if (OpenCV_FOUND)
    add_executable(webcam_face_pose_ex webcam_face_pose_ex.cpp)
    target_include_directories(webcam_face_pose_ex PUBLIC ${Dlib_INCLUDE_DIRS})
    target_include_directories(webcam_face_pose_ex PRIVATE ${OpenCV_INCLUDE_DIRS})
    target_link_libraries(webcam_face_pose_ex ${Dlib_LIBS} ${OpenCV_LIBS})
    target_compile_features(webcam_face_pose_ex PUBLIC cxx_std_11)
  else ()
    message("OpenCV not found. So won't compile webcam_face_pose_ex.")
    add_executable(face_landmark_detection_ex face_landmark_detection_ex.cpp)
    target_include_directories(face_landmark_detection_ex PUBLIC ${Dlib_INCLUDE_DIRS})
    target_link_libraries(face_landmark_detection_ex ${Dlib_LIBS})
    target_compile_features(face_landmark_detection_ex PUBLIC cxx_std_11)
  endif()
else()
  message("dlib not found. So won't compile anything.")
endif()
