name:                atprotocol-tui
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/Cj-bc/playground
license:             BSD3
license-file:        LICENSE
author:              Cj.bc_sd a.k.a Cj-bc
maintainer:          cj.bc-sd@outlook.jp
copyright:           Cj.bc_sd a.k.a Cj-bc
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Trying AT protocol by bluesky

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable atprotocol-tui-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , atprotocol-tui
                     , http-client
                     , http-types
                     , http-conduit
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite atprotocol-tui-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , atprotocol-tui
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/Cj-bc/playground
