name:                reanimateTesting
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            
license:             BSD3
license-file:        LICENSE
author:              
maintainer:          
copyright:           
category:            
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable reanimateTesting
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       reanimate >= 1.1.3.1,
                       reanimate-svg,
                       lens,
                       mtl

