name:                writeLogInAsync
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/Cj-bc/writeLogInAsync#readme
license:             BSD3
license-file:        LICENSE
author:              Cj.bc_sd a.k.a Cj-bc
maintainer:          cj.bc-sd@outlook.jp
copyright:           Cj.bc_sd a.k.a Cj-bc
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/Cj-bc/writeLogInAsync#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable writeLogInAsync-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , writeLogInAsync
                     , mtl
                     , async
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/Cj-bc/playground
