[tool.poetry]
name = "pyworldvocoder-test"
version = "0.1.0"
description = ""
authors = ["Cj-bc <cj.bc-sd@outlook.jp>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
