cabal-version:       2.2

name:                wasm-runtime
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/Cj-bc/wasm-runtime#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Cj.bc_sd a.k.a Cj-bc
maintainer:          cj.bc-sd@outlook.jp
copyright:           Cj.bc_sd a.k.a Cj-bc
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/Cj-bc/wasm-runtime#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Parser
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable wasm-runtime-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , wasm-runtime
                     , megaparsec
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite wasm-runtime-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wasm-runtime
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/Cj-bc/wasm-runtime
